--- a/deno.json
+++ b/deno.json
@@ -10,7 +10,8 @@
     "check": "deno check **/*.ts"
   },
   "imports": {
-    "@/": "./src/"
+    "@/": "./src/",
+    "std/": "https://deno.land/std@0.224.0/"
   },
   "compilerOptions": {
     "strict": true,
@@ -41,7 +42,7 @@
     "indentWidth": 2,
     "semiColons": true,
     "proseWrap": "preserve",
-    "include": ["src/", "test/"],
+    "include": ["src/", "tests/"],
     "exclude": ["dist", "node_modules"]
   }
 }
