--- a/.github/test.yml
+++ b/.github/test.yml
@@ -3,8 +3,11 @@ name: Test
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
+    paths:
+      - '**.ts'
+      - 'deno.json'
+      - 'deno.lock'
+      - '.github/workflows/ci.yml'
 
 jobs:
   test:
