--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
       - '**.ts'
       - 'deno.json'
       - 'deno.lock'
-      - '.github/workflows/ci.yml'
+      - '.github/workflows/test.yml'
 
 jobs:
   test:
@@ -24,37 +24,7 @@ jobs:
         with:
           deno-version: v2.1.0
 
-      - name: Verify formatting
-        run: deno fmt --check
-
-      - name: Run linter
-        run: deno lint
-
-      - name: Type check
-        run: deno check
-
-      - name: Run tests
-        run: deno test --allow-read
-
-      - name: Cache dependencies
-        run: |
-          deno cache main.ts
-          deno cache --lock=deno.lock --lock-write deps.ts
-
-  cache:
-    name: Cache
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Deno
-        uses: denoland/setup-deno@v1
-        with:
-          deno-version: v1.41.0
-
-      - name: Cache dependencies
+      - name: Restore cache
         uses: actions/cache@v3
         with:
           path: |
@@ -63,3 +33,22 @@ jobs:
           key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}
           restore-keys: |
             ${{ runner.os }}-deno-
+
+      - name: Verify formatting
+        run: deno fmt --check
+
+      - name: Run linter
+        run: deno lint
+
+      - name: Type check
+        run: |
+          deno check src/
+          deno check tests/
+
+      - name: Run tests
+        run: deno test --allow-read
+
+      - name: Cache dependencies
+        if: hashFiles('deps.ts') != ''
+        run: |
+          deno cache --lock=deno.lock deps.ts
