--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
   "deno.enable": true,
   "deno.lint": true,
-  "deno.importMap": "./deno.json",
-  "editor.defaultFormatter": "denoland.vscode-deno",
+  "deno.unstable": [],
   "editor.formatOnSave": true,
+  "editor.defaultFormatter": "denoland.vscode-deno",
   "[typescript]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
-  }
+  },
+  "typescript.validate.enable": false,
+  "javascript.validate.enable": false
 }
